--- a/src/components/section2.html
+++ b/src/components/section2.html
@@ -9,7 +9,7 @@
       </div>
       <div class="list-card">
         <include src="./components/card.html" locals='{
-          "url":"../assets/images/Circle_layer.png",
+          "url":"../assets/images/circle.png",
           "title":"Enviromental Law",
           "description":"Environmental legal issues might occur since the planned business activities are designed"
         }'></include>
