--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -21,4 +21,9 @@
       </figure>
     </div>
   </div>
+  <div class="bars">
+    <figure class="bars__btn">
+      <img src="../assets/icons/bars-solid.svg" alt="bars" />
+    </figure>
+  </div>
 </nav>
