--- a/src/layout/main.html
+++ b/src/layout/main.html
@@ -1,4 +1,4 @@
-<main>
+<main class="main">
   <include src="./components/section1.html"></include>
   <include src="./components/section2.html"></include>
   <include src="./components/section3.html"></include>
