--- a/src/stylesheets/components/_block-link.scss
+++ b/src/stylesheets/components/_block-link.scss
@@ -6,6 +6,7 @@
   font-style: normal;
   font-feature-settings: "salt" on, "liga" off;
   color: $background-color;
+  width: 130px;
   .block-link__title {
     font-weight: 500;
     font-size: 20px;
