--- a/src/stylesheets/components/_section2.scss
+++ b/src/stylesheets/components/_section2.scss
@@ -2,14 +2,23 @@
 
 .section2 {
   background: $section-background;
-  .container{
+  .container {
     padding: 126px 0 126px 0;
   }
   .section2-content {
     display: flex;
     justify-content: space-between;
+    @include tablet-lager {
+      flex-direction: column;
+      gap: 40px;
+      margin-left: 80px;
+    }
     padding-right: 120px;
     align-items: center;
+    @include desktop-small {
+      padding-left: 20px;
+      padding-right: 80px;
+    }
     .information {
       &__title {
         font-family: $header-font;
@@ -18,6 +27,14 @@
         line-height: 64px;
         letter-spacing: 0.323077px;
         color: $text-color;
+        @include desktop-small {
+          font-size: 40px;
+          line-height: 58px;
+        }
+        @include tablet {
+          font-size: 30px;
+          line-height: 50px;
+        }
       }
       &__description {
         margin-top: 11px;
@@ -27,12 +44,25 @@
         line-height: 36px;
         letter-spacing: 0.5px;
         color: $border-color;
+        @include desktop-small {
+          font-size: 16px;
+          line-height: 28px;
+        }
+        @include tablet {
+          font-size: 14px;
+          line-height: 24px;
+        }
       }
     }
-    .list-card{
+    .list-card {
       display: grid;
       grid-template-columns: 280px 280px;
       grid-template-rows: 280px 280px;
+      @include tablet {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+      }
       padding-bottom: 30px;
     }
   }
