--- a/src/stylesheets/components/_section3.scss
+++ b/src/stylesheets/components/_section3.scss
@@ -12,12 +12,24 @@
     text-align: center;
     font-feature-settings: "salt" on, "liga" off;
     padding:53px 0 55px 0;
+    
     &__title {
       font-family: $header-font;
       font-weight: 900;
       font-size: 48px;
       line-height: 64px;
       letter-spacing: 0.005em;
+      @include desktop-small {
+          font-size: 43px;
+          line-height: 55px;
+      }
+      @include tablet {
+          font-size: 36px;
+          line-height: 50px;
+      }
+      @include mobile {
+          font-size: 30px;
+      }
     }
     &__description {
       margin-top: 8px;
@@ -26,12 +38,29 @@
       font-size: 18px;
       line-height: 32px;
       letter-spacing: 0.5px;
-      font-feature-settings: "salt" on, "liga" off;
+      @include desktop-small {
+          font-size: 15px;
+          line-height: 28px;
+      }
+      @include tablet {
+          font-size: 14px;
+          line-height: 25px;
+      }
+       @include mobile {
+          font-size: 12px;
+      }
     }
     .list-value {
       margin-top: 48px;
       display: flex;
       align-items: center;
+      @include desktop-small {
+          margin-top: 40px;
+      }
+      @include mobile {
+          flex-direction: column;
+          gap:50px;
+      }
     }
     .divider {
       display: flex;
@@ -40,6 +69,9 @@
       opacity: 0.4;
       border: 1px solid $background-color;
       transform: rotate(90deg);
+      @include mobile {
+        transform: rotate(180deg);
+      }
     }
   }
 }
