--- a/src/stylesheets/components/_section1.scss
+++ b/src/stylesheets/components/_section1.scss
@@ -2,6 +2,20 @@
 .container {
   max-width: 1140px;
   margin: 0 auto;
+ 
+  @include desktop-small {
+    max-width: 990px;
+  }
+  @include tablet-lager {
+    max-width: 750px;
+  }
+  @include tablet {
+    max-width: 720px;
+  }
+  @include mobile {
+    max-width: 550px;
+    
+  }
 }
 .section1 {
   width: 100%;
@@ -9,6 +23,14 @@
     position: relative;
     .content-info {
       margin-top: 96px;
+      position: relative;
+      z-index: 999;
+      @include desktop-small {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
       .content-info__subtitle {
         background-color: #e7f6ff;
         border-radius: 26.5px;
@@ -30,6 +52,22 @@
           border-radius: 26.5px;
           color: $background-color;
         }
+
+        @include desktop-small {
+          font-size: 15px;
+        }
+
+        @include tablet {
+          width: 470px;
+          height: 40px;
+          font-size: 14px;
+        }
+
+        @include mobile {
+          width: 260px;
+          height: 40px;
+          font-size: 14px;
+        }
       }
       .content-info__title {
         font-family: $header-font;
@@ -39,6 +77,17 @@
         line-height: 120%;
         letter-spacing: 0.02em;
         color: $primary-color;
+        @include desktop-small {
+          font-size: 80px;
+          line-height: 110%;
+        }
+        @include tablet {
+          font-size: 70px;
+        }
+
+        @include mobile {
+          font-size: 40px;
+        }
       }
       .content-info__description {
         font-family: $description-font;
@@ -48,6 +97,16 @@
         letter-spacing: 0.5px;
         color: $text-sub-color;
         margin-top: 46px;
+        @include desktop-small {
+          font-size: 20px;
+          line-height: 150%;
+        }
+        @include tablet {
+          font-size: 17px;
+        }
+        @include mobile {
+          font-size: 12px;
+        }
       }
       .content-info__btn {
         margin-top: 42px;
@@ -67,6 +126,12 @@
           line-height: 140.5%;
           letter-spacing: 0.04em;
           color: $border-color;
+          @include tablet {
+            font-size: 15px;
+          }
+          @include mobile {
+            font-size: 12px;
+          }
         }
         &-logo {
           margin-top: 40px;
@@ -74,13 +139,19 @@
           grid-template-columns: 150px 150px;
           grid-template-rows: 50px 50px;
           padding-bottom: 30px;
+          @include tablet-lager{
+            justify-content: center;
+          }
         }
       }
     }
     .content-person {
       position: absolute;
       bottom: 0;
-      left: 510px;
+      right: -120px;
+      @include desktop-small {
+        display: none;
+      }
       .person-info {
         position: absolute;
         display: flex;
@@ -95,7 +166,7 @@
         border-radius: 10px;
         font-family: $description-font;
         line-height: 36px;
-        box-shadow:  0px 39px 100px rgba(25, 62, 108, 0.12);
+        box-shadow: 0px 39px 100px rgba(25, 62, 108, 0.12);
         &__name {
           font-weight: 700;
           font-size: 24px;
