--- a/src/stylesheets/components/_section4.scss
+++ b/src/stylesheets/components/_section4.scss
@@ -12,11 +12,27 @@
       letter-spacing: 0.5px;
       font-feature-settings: "salt" on, "liga" off;
       color: #2d2f30;
+      @include desktop-small {
+         font-size: 45px;
+         line-height: 60px;
+      }
+      @include mobile{
+        font-size: 33px;
+        line-height: 40px;
+      }
     }
     .list-testimonial{
       display: flex;
       margin-top: 51px;
       gap:30px;
+      justify-content: center;
+      @include desktop-small {
+         gap:20px;
+      }
+      @include tablet-lager {
+         gap:50px;
+         flex-direction: column;
+      }
     }
   }
 }
