--- a/src/stylesheets/components/_section5.scss
+++ b/src/stylesheets/components/_section5.scss
@@ -6,7 +6,17 @@
     justify-content: space-between;
     padding: 37px 0 40px 0;
     font-feature-settings: "salt" on, "liga" off;
+    @include tablet {
+      justify-content: center;
+      flex-direction: column;
+      gap: 50px;
+    }
     .infomation {
+      @include tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
       &__title {
         font-family: $header-font;
         font-weight: 700;
@@ -14,6 +24,23 @@
         line-height: 64px;
         letter-spacing: 0.5px;
         color: $text-color;
+        @include desktop-small {
+          font-size: 40px;
+          line-height: 60px;
+        }
+        @include tablet-lager {
+          font-size: 35px;
+          line-height: 50px;
+        }
+        @include tablet {
+          font-size: 30px;
+          line-height: 40px;
+          text-align: center;
+        }
+        @include mobile {
+          font-size: 27px;
+          line-height: 36px;
+        }
       }
       &__description {
         margin-top: 15px;
@@ -23,6 +50,20 @@
         line-height: 36px;
         letter-spacing: 0.5px;
         color: $text-sub-color;
+        width: 95%;
+        @include desktop-small {
+          font-size: 22px;
+          line-height: 30px;
+        }
+        @include tablet {
+          font-size: 18px;
+          line-height: 26px;
+          text-align: center;
+        }
+        @include mobile {
+          font-size: 16px;
+          line-height: 24px;
+        }
       }
       &__btn {
         display: flex;
@@ -41,7 +82,27 @@
         letter-spacing: 0.5px;
         color: $background-color;
         border: none;
+        &--left {
+          margin-top: 10px;
+        }
+        @include desktop-small {
+          width: 200px;
+          height: 60px;
+        }
+        @include mobile {
+          font-size: 18px;
+          width: 180px;
+          height: 55px;
+        }
       }
     }
+     &__img {
+        @include tablet{
+          img{
+            max-width: 100%;
+          }
+          width: 60%;
+        }
+      }
   }
 }
