--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -7,9 +7,23 @@
       display: flex;
       justify-content: space-between;
       padding: 73px 70px 90px 0;
+      @include tablet-lager{
+        gap: 30px;
+      }
+      @include tablet{
+        flex-direction: column;
+        align-items: center;
+        gap:50px;
+        margin-left: 50px;
+      }
       .list-block-link {
         display: flex;
         gap: 100px;
+        @include tablet{
+          flex-wrap: wrap;
+          justify-content: center;
+          padding-left:50px ;
+        }
       }
       &-logo {
         display: flex;
@@ -42,6 +56,11 @@
       display: flex;
       justify-content: space-between;
       padding: 24px 0 23px 0;
+      @include tablet{
+          flex-direction: column;
+          align-items: center;
+          gap:10px;
+      }
       &__copyright {
         font-family: $copyright-font;
         font-weight: 400;
