--- a/src/components/nav-list.html
+++ b/src/components/nav-list.html
@@ -1,5 +1,5 @@
 <each loop="item in {{ list }} ">
   <div class="{{classList}}">
-    <a href="javascript:void(0)" class="{{classLink}}">{{item}}</a>
+    <a href="#" class="{{classLink}}">{{item}}</a>
   </div>
 </each>
