--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -21,9 +21,40 @@
       </figure>
     </div>
   </div>
-  <div class="bars">
+  <label for="nav-mobile-input"  class="bars">
     <figure class="bars__btn">
       <img src="../assets/icons/bars-solid.svg" alt="bars" />
     </figure>
+  </label>
+  <input type="checkbox" name="" id="nav-mobile-input" class="navbar__input">
+  <label for="nav-mobile-input" hidden class="navbar__overlay"></label>
+  <div class="navbar-mobile">
+    <label for="nav-mobile-input" class="close">
+      <figure class="close__icons">
+        <img src="../assets/icons/xmark-solid.svg" alt="close" />
+      </figure>
+    </label>
+    <div class="navbar-mobile-categories">
+      <div class="navbar-logo">
+        <div class="navbar-logo__circle">L</div>
+        <div class="navbar-logo__text">Lawliet</div>
+      </div>
+      <include src="./components/nav-list.html" locals='{
+              "classList":"navbar-mobile-categories__item",
+              "classLink":"navbar-mobile-categories__item",
+              "list":"[`CONTACT`,`TESTIMONIALS`,`ABOUT`,`TERMS`]"
+            }'>
+      </include>
+      <div class="navbar-input">
+          <input type="text" class="navbar-input__input" placeholder="search...">
+          <div class="navbar-input__icons">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M21 21L15 15L21 21ZM17 10C17 10.9193 16.8189 11.8295 16.4672 12.6788C16.1154 13.5281 15.5998 14.2997 14.9497 14.9497C14.2997 15.5998 13.5281 16.1154 12.6788 16.4672C11.8295 16.8189 10.9193 17 10 17C9.08075 17 8.1705 16.8189 7.32122 16.4672C6.47194 16.1154 5.70026 15.5998 5.05025 14.9497C4.40024 14.2997 3.88463 13.5281 3.53284 12.6788C3.18106 11.8295 3 10.9193 3 10C3 8.14348 3.7375 6.36301 5.05025 5.05025C6.36301 3.7375 8.14348 3 10 3C11.8565 3 13.637 3.7375 14.9497 5.05025C16.2625 6.36301 17 8.14348 17 10Z"
+                stroke="#727272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+      </div>
+    </div>
   </div>
 </nav>
