--- a/src/stylesheets/components/_section5.scss
+++ b/src/stylesheets/components/_section5.scss
@@ -94,15 +94,26 @@
           width: 180px;
           height: 55px;
         }
-      }
-    }
-     &__img {
-        @include tablet{
-          img{
-            max-width: 100%;
-          }
-          width: 60%;
+        transition: all 0.7s ease-out;
+        &:hover {
+          cursor: pointer;
+          transition: all 0.5s ease-out;
+          transform: translateY(-3px);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        &:active {
+          transform: translateY(-1px);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
         }
       }
+    }
+    &__img {
+      @include tablet {
+        img {
+          max-width: 100%;
+        }
+        width: 250px;
+      }
+    }
   }
 }
