--- a/src/stylesheets/components/_nav.scss
+++ b/src/stylesheets/components/_nav.scss
@@ -42,7 +42,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-left: 50px;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
       background-color: $background-color;
       width: 230px;
       border-radius: 8px;
