feat: change color navbar mobile

--- a/src/stylesheets/components/_nav.scss
+++ b/src/stylesheets/components/_nav.scss
@@ -27,7 +27,7 @@
     bottom: 0;
     width: 320px;
     max-width: 100%;
-    background-color: #c5c9cc;
+    background-color: #d9dcdf;
     z-index: 9999999;
     transform: translateX(100%);
     transition: all linear 0.2s;
