--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -35,10 +35,10 @@
       </figure>
     </label>
     <div class="navbar-mobile-categories">
-      <div class="navbar-logo">
+      <a href="#" class="navbar-logo">
         <div class="navbar-logo__circle">L</div>
         <div class="navbar-logo__text">Lawliet</div>
-      </div>
+      </a>
       <include src="./components/nav-list.html" locals='{
               "classList":"navbar-mobile-categories__item",
               "classLink":"navbar-mobile-categories__item",
