--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -5,8 +5,8 @@
     background-color: $primary-color;
     .content {
       display: flex;
+      padding: 73px 0 90px 0;
       justify-content: space-between;
-      padding: 73px 70px 90px 0;
       @include tablet-lager{
         gap: 30px;
       }
@@ -14,15 +14,14 @@
         flex-direction: column;
         align-items: center;
         gap:50px;
-        margin-left: 50px;
+        justify-content: center;
       }
       .list-block-link {
         display: flex;
         gap: 100px;
+        justify-content: center;
         @include tablet{
           flex-wrap: wrap;
-          justify-content: center;
-          padding-left:50px ;
         }
       }
       &-logo {
