--- a/src/stylesheets/components/_nav.scss
+++ b/src/stylesheets/components/_nav.scss
@@ -50,13 +50,13 @@
       border-radius: 8px;
       box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
       height: 40px;
-      &__input{
-        padding:10px 10px;
+      &__input {
+        padding: 10px 10px;
         outline: none;
         border: none;
         border-radius: 8px;
       }
-      &__icons{
+      &__icons {
         display: flex;
         align-items: center;
       }
@@ -112,7 +112,7 @@
       align-items: center;
       justify-content: center;
     }
-    &:hover{
+    &:hover {
       cursor: pointer;
     }
   }
@@ -140,16 +140,24 @@
         width: 18px;
         height: 18px;
         margin-bottom: 10px;
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
       }
     }
   }
+
   .bars__btn {
     width: 20px;
     height: 20px;
     display: none;
+    @include tablet-lager {
+      display: block;
+    }
+  }
+
+  .bars {
+      display: none;
     @include tablet-lager {
       display: block;
     }
