feat: add aos & fix html inspector

--- a/src/components/card.html
+++ b/src/components/card.html
@@ -1,5 +1,5 @@
-<section class="card">
-  <figure class="card__img">
+<section class="card" data-aos-duration="1100" data-aos="zoom-out">
+  <figure>
     <img src="{{url}}" alt="card image" />
   </figure>
   <p class="card__title">{{title}}</p>
