--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="navbar-logo">
-    <div class="navbar-logo__circle">L</div>
-    <div class="navbar-logo__text">Lawliet</div>
+    <p class="navbar-logo__circle">L</p>
+    <p>Lawliet</p>
   </div>
   <div class="navbar-right">
     <div class="navbar-right-categories">
@@ -29,7 +29,7 @@
   <input type="checkbox" name="" id="nav-mobile-input" class="navbar__input">
   <label for="nav-mobile-input" hidden class="navbar__overlay"></label>
   <div class="navbar-mobile">
-    <label for="nav-mobile-input" class="close">
+    <label for="nav-mobile-input">
       <figure class="close__icons">
         <img src="../assets/icons/xmark-solid.svg" alt="close" />
       </figure>
@@ -37,7 +37,7 @@
     <div class="navbar-mobile-categories">
       <a href="#" class="navbar-logo">
         <div class="navbar-logo__circle">L</div>
-        <div class="navbar-logo__text">Lawliet</div>
+        <p>Lawliet</p>
       </a>
       <include src="./components/nav-list.html" locals='{
               "classList":"navbar-mobile-categories__item",
