--- a/src/components/section1.html
+++ b/src/components/section1.html
@@ -2,11 +2,12 @@
   <div class="container">
     <include src="./layout/header.html"></include>
     <div class="content">
-      <div class="content-info">
+      <div class="content-info" data-aos-duration="1000"
+            data-aos="fade-left">
         <div class="content-info__subtitle">
           <span class="content-info__subtitle--left">New</span>
-          <span class="content-info__subtitle--right"
-            >Stay connected to the upcoming & Recent jobs</span
+          <p
+            >Stay connected to the upcoming & Recent jobs</p
           >
         </div>
         <div class="content-info__title">
@@ -22,23 +23,24 @@
         <div class="company">
           <p class="company__introduce">Trusted by 10+ companies in indonesia</p>
           <div class="company-logo">
-                <figure class="company-logo__img company-logo__img--airbnb">
+                <figure>
                     <img src="../assets/images/Airbnb_Logo.svg" alt="airbnb">
                 </figure>
-                <figure class="company-logo__img company-logo__img--hubspot">
+                <figure>
                     <img src="../assets/images/Hubspot_Logo.svg" alt="hubspot">
                 </figure>
-                <figure class="company-logo__img company-logo__img--microsoft">
+                <figure >
                     <img src="../assets/images/Microsoft_Logo.svg" alt="microsoft">
                 </figure>
-                <figure class="company-logo__img company-logo__img--google">
+                <figure >
                     <img src="../assets/images/Google_Logo.svg" alt="google">
                 </figure>
           </div>
         </div>  
       </div>
-      <div class="content-person">
-        <figure class="content-person__img">
+      <div class="content-person" data-aos-duration="1000"
+            data-aos="fade-right">
+        <figure>
           <img src="../assets/images/Hero_Image.png" alt="" />
         </figure>
         <div class="person-info">
