--- a/src/components/section2.html
+++ b/src/components/section2.html
@@ -1,6 +1,6 @@
 <section class="section2">
   <div class="container">
-    <div class="section2-content">
+    <div class="section2-content" data-aos-duration="1100" data-aos="zoom-out">
       <div class="information">
         <p class="information__title"> Why do we help <br>with legalization? </p>
         <p class="information__description">We are here for UMKM in Indonesia <br>to carry out the legalization process,
