--- a/src/components/section4.html
+++ b/src/components/section4.html
@@ -1,7 +1,7 @@
 <section class="section4">
  <div class="container">
     <div class="section4-content">
-       <p class="section4-content__title">Clients Testimonial</p>
+       <p class="section4-content__title" data-aos-duration="1100" data-aos="zoom-out">Clients Testimonial</p>
        <div class="list-testimonial">
          <include src="./components/testimonial.html" locals='{
             "url":"../assets/images/Photo_Testimonial.png",
