--- a/src/components/section5.html
+++ b/src/components/section5.html
@@ -1,7 +1,8 @@
 <section class="section5">
   <div class="container">
-    <div class="section5-content">
-      <div class="infomation">
+    <div class="section5-content" >
+      <div class="infomation" data-aos-duration="1100"
+  data-aos="fade-right">
         <p class="infomation__title">Complex Questions?</p>
         <p class="infomation__description">Request for a personalized budget for your legal problem. We will send you a coupe options in 24 hours. You can have
         free consult , if a our first customer</p>
@@ -12,7 +13,8 @@
           Call now
         </button>
       </div>
-      <figure class="section5-content__img">
+      <figure class="section5-content__img" data-aos-duration="1100"
+  data-aos="fade-left">
          <img src="../assets/images/image_Complex_Questions.png" alt="">
       </figure>
     </div>
