--- a/src/components/social.html
+++ b/src/components/social.html
@@ -1,5 +1,5 @@
 <section class="social">
-  <figure class="social__img">
+  <figure>
     <img src="{{url}}" alt="social image" />
   </figure>
 </section>
