--- a/src/components/testimonial.html
+++ b/src/components/testimonial.html
@@ -1,11 +1,12 @@
-<section class="testimonial">
+<section class="testimonial" data-aos-duration="1100"
+  data-aos="flip-right">
   <div class="testimonial-content">
     <p class="testimonial-content__title">{{title}}</p>
     <p class="testimonial-content__description">{{description}}</p>
     <div class="testimonial-content__arrow"></div>
   </div>
   <div class="testimonial-owner">
-     <figure class="testimonial-owner__img">
+     <figure>
         <img src="{{url}}" alt="testimonial image">
      </figure>
      <div class="info">
