--- a/src/stylesheets/components/_section1.scss
+++ b/src/stylesheets/components/_section1.scss
@@ -50,6 +50,7 @@
           background: #094b72;
           border-radius: 26.5px;
           color: $background-color;
+          cursor: pointer;
         }
 
         @include desktop-small {
