--- a/src/components/block-link.html
+++ b/src/components/block-link.html
@@ -2,7 +2,7 @@
   <p class="block-link__title">{{title}}</p>
   <include src="./components/nav-list.html" locals='{
       "classList":"footer-list-link",
-      "classLink":"footer-list-link__link",
+      "classLink":"",
       "list":"{{listLink}}"
   }'>
 </section>
