--- a/src/components/section3.html
+++ b/src/components/section3.html
@@ -1,6 +1,6 @@
 <section class="section3">
   <div class="container">
-    <div class="section3-content">
+    <div class="section3-content" data-aos-duration="1100" data-aos="zoom-in">
       <p class="section3-content__title">Some count that matters</p>
       <p class="section3-content__description">Our achievement in the journey depicted in numbers</p>
       <div class="list-value">
