--- a/src/stylesheets/components/_section1.scss
+++ b/src/stylesheets/components/_section1.scss
@@ -150,7 +150,7 @@
           grid-template-columns: 150px 150px;
           grid-template-rows: 50px 50px;
           padding-bottom: 30px;
-          @include tablet-lager{
+          @include desktop-small{
             justify-content: center;
           }
         }
